fix: scrolling over carousel on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8946,6 +8946,11 @@ h1, h2, h3, h4, h5,
     margin-top: -70px;
     padding-top: 10em !important; } }
 
+  .owl-carousel .owl-stage, .owl-carousel.owl-drag .owl-item {
+      -ms-touch-action: pan-y !important;
+      touch-action: pan-y !important;
+  }
+
 .project {
   width: 100%;
   height: 285px;
